--- a/love.css
+++ b/love.css
@@ -11,7 +11,8 @@ body{
   align-items: center;
   justify-content: center;
     min-height : 100vh;
-    background-image:url(final.jpg) no repeat center/center/cover;
+    background-image:url(final.jpg) ;
+    background-repeat: no-repeat;
     color : whitesmoke;
 }
 
